[package]
name = "__"
description = "__; drop to the trash syntax sugar for any types."
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = ["parsing"]
keywords = ["logical", "expression", "extensible", "parser", "text"]
documentation = "https://docs.rs/__/"
repository = "https://github.com/usagi/__"
version = "1.0.0"
edition = "2021"
license = "MIT"
