[package]
name = "to_unit"
description = "ToUnit; Any type to () syntax sugar."
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = ["rust-patterns"]
keywords = ["syntax-sugar", "any", "type", "unit"]
documentation = "https://docs.rs/__/"
repository = "https://github.com/usagi/__"
version = "1.0.0"
edition = "2021"
license = "MIT"
